--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Product</title>
+    <title>Edit Product</title>
   </head>
   <body>
-    <h1>Add a new product</h1>
-    <form action="/products" method="post">
+    <h1>Edit product</h1>
+    <form action="/products/<%= product._id %>?_method=PUT" method="post">
       <label for="name">Product Name:</label>
-      <input type="text" name="name" id="name" placeholder="product name" />
+      <input type="text" name="name" id="name" placeholder="product name" value="<%= product.name %> " />
       <label for="price">Price (unit):</label>
-      <input type="number" name="price" id="price" placeholder="price" />
+      <input type="number" name="price" id="price" placeholder="price" value="<%= product.price %>" />
       <label for="category">Select category</label>
       <select name="category" id="category">
         <option value="fruit">Fruit</option>
@@ -21,5 +21,6 @@
       </select>
       <button>Submit</button>
     </form>
+    <a href="/products/<%= product._id %>">Cancel</a>
   </body>
 </html>
